--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   ],
   "require": {
     "php": ">=7.0.0",
-    "ext-json": "^1.7",
+    "ext-json": "*",
     "ext-simplexml": "*",
     "ext-dom": "*"
   },
